// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Sizes renders large styling if provided 1`] = `
<Button
  size="large"
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      size="large"
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--lg "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        size="large"
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Sizes renders small styling if provided 1`] = `
<Button
  size="small"
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      size="small"
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--sm "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        size="small"
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button States renders active styling if provided 1`] = `
<Button
  active={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      active={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn is-active "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button States renders disabled styling if provided 1`] = `
<Button
  disabled={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      disabled={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn is-disabled "
        data-garden-id="buttons.button"
        data-garden-version="version"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button States renders focused styling if provided 1`] = `
<Button
  focused={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn is-focused "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button States renders hovered styling if provided 1`] = `
<Button
  hovered={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      hovered={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn is-hovered "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button States renders selected styling if provided 1`] = `
<Button
  selected={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      selected={true}
      tabIndex={0}
    >
      <button
        className="c-btn is-selected "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        selected={true}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Types renders basic styling if provided 1`] = `
<Button
  basic={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      basic={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--basic "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Types renders link styling if provided 1`] = `
<Button
  link={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      link={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--anchor "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Types renders muted styling if provided 1`] = `
<Button
  muted={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      muted={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--muted "
        data-garden-id="buttons.button"
        data-garden-version="version"
        muted={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Types renders pill styling if provided 1`] = `
<Button
  pill={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      pill={true}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--pill "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button Types renders primary styling if provided 1`] = `
<Button
  primary={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      primary={true}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--primary "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button renders correct combination of danger and disabled styling if provided 1`] = `
<Button
  danger={true}
  disabled={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      danger={true}
      disabled={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn is-disabled "
        data-garden-id="buttons.button"
        data-garden-version="version"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button renders danger styling if provided 1`] = `
<Button
  danger={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      danger={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--danger "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button renders default styling 1`] = `
<Button>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button renders focus-inset styling if provided 1`] = `
<Button
  focusInset={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focusInset={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--focus-inset "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;

exports[`Button renders stretched styling if provided 1`] = `
<Button
  stretched={true}
>
  <KeyboardFocusContainer>
    <Button__StyledButton
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      stretched={true}
      tabIndex={0}
    >
      <button
        className="c-btn c-btn--full "
        data-garden-id="buttons.button"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
        type="button"
      />
    </Button__StyledButton>
  </KeyboardFocusContainer>
</Button>
`;
